fixed too small font size on small screens

--- a/public/css/common/common.css
+++ b/public/css/common/common.css
@@ -73,7 +73,7 @@ a[disabled] {
 
 @media screen and (max-width: 1350px) {
     body {
-        font-size: 0.8em;
+        font-size: 1em;
     }
 
     .benefiter-info > h2{
